fix some mistakes (matrix conversion and exec file generation)

--- a/experiments/cigri.conf
+++ b/experiments/cigri.conf
@@ -32,7 +32,8 @@ STRESS_FACTOR="8.0"
 ## LOGGING OPTIONS
 #############################################################################
 #File where to log (STDOUT AND STDERR are accepted as  well)
-LOG_FILE = "STDERR"
+LOG_FILE = "/tmp/cigri.log"
+# LOG_FILE = "STDERR"
 # loglevel as supported by the ruby logger (FATAL, ERROR, WARN, INFO, DEBUG)
 LOG_LEVEL = "INFO"
 # Job debugging. Set to 1 if you want to dump all submitted jobs
